<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Notes</string>
    <string name="title_activity_main">Notes</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_take_note">Take Note</string>
    <string name="default_note_text">Your text here.</string>
    <string name="default_timestamp_text">00:00</string>
    <string name="default_note_title">Title</string>
    <string name="take_note_title">Title</string>
    <string name="default_note_content_text">Note</string>
    <string name="action_discard">Discard</string>
    <string name="action_clear">Clear List</string>
    <string name="action_fill_list">Fill List</string>
    <string name="title_activity_edit_note">Edit Note</string>
    <string name="last_edited_text">edited:</string>

</resources>
