<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ActivityMain">
    <item
        android:id="@+id/action_clear"
        android:title="@string/action_clear"
        android:orderInCategory="10"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_debug_fill_list"
        android:title="@string/action_fill_list"
        android:orderInCategory="110"
        app:showAsAction="never"
        android:visible="false"
        />
</menu>
