<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/margin_note_top">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/default_note_title"
        android:id="@+id/txtNewNoteTitle"
        android:layout_marginStart="@dimen/activity_margin"
        android:layout_marginTop="@dimen/margin_note_top"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/default_note_text"
        android:id="@+id/txtText"
        android:layout_below="@+id/txtNewNoteTitle"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/activity_margin"
        android:layout_marginTop="@dimen/margin_note_title_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:text="@string/default_timestamp_text"
        android:id="@+id/txtTimestamp"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/activity_margin"
        android:layout_alignBottom="@+id/txtText"
        android:layout_alignParentEnd="true" />

</RelativeLayout>