<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/PrimaryAppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityMain">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <EditText
        android:id="@+id/txtEditNoteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/app_bar"
        android:layout_marginEnd="@dimen/activity_margin"
        android:layout_marginStart="@dimen/activity_margin"
        android:layout_marginTop="@dimen/activity_margin"
        android:background="@android:color/transparent"
        android:elegantTextHeight="false"
        android:hint="@string/take_note_title"
        android:maxLines="1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold|normal" />

    <EditText
        android:id="@+id/txtEditNoteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/txtEditNoteTitle"
        android:layout_below="@+id/txtEditNoteTitle"
        android:layout_marginEnd="@dimen/activity_margin"
        android:layout_marginTop="@dimen/margin_take_note_fields"
        android:background="@android:color/transparent"
        android:elegantTextHeight="false"
        android:ems="10"
        android:hint="@string/default_note_content_text"
        android:inputType="textMultiLine"
        android:nestedScrollingEnabled="false" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/activity_margin"
        android:layout_marginEnd="@dimen/activity_margin"
        android:elevation="@dimen/button_elevation"
        android:src="@drawable/ic_undo_variant_black_36dp"
        app:backgroundTint="@color/colorFabEditNoteNoChanges"
        app:fabSize="normal"
        app:pressedTranslationZ="@dimen/button_press_elevation"
        app:rippleColor="@color/colorFabRippleColor" />

    <TextClock
        android:id="@+id/txtEditNoteTimestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_margin"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtEdited"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtEditNoteTimestamp"
        android:layout_centerHorizontal="true"
        android:text="@string/last_edited_text"
        android:textSize="14sp" />
</RelativeLayout>